Bug 429057: New service.bundleid automatic service property
OSGi has defined a new service.bundleid service property which is to be
automatically added to the service properties of each service
registration. The value of this service property is a Long holding the
bundle id of the bundle whose context was used to register the service.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>